	 Reviewed and fixed all the return codes for all window message handles
	 fixed selector dialog problem where cancelling the dialog would result
	 in choosing option 0 (Marek).
20080906 menu_data.pl: Win32: Minor fix to the menu handling code - moved
	 return into proper place (Marek).
20080910 ui/win32/{roms.rc,win32joystick.rc,pokefinder.rc,options-resource.pl,
	 browse.rc,picture.rc,memorybrowser.rc,binary.rc,debugger.rc,
	 rollback.rc,select_template.rc}: Win32: Changed style for all dialogs
	 to make those dialogs show on the taskbar, converted
	 select_template.rc from DOS to UNIX (Marek).
20081006 compat/unix/file.c: make sure mode is specified when opening a file
         for writing (fixes bug #2146742) (thanks, Cygnus) (Fred).
20081021 z80/tests/README: small documentation update (patch #2183257)
         (Matthew Westcott).
20081021 ChangeLog: update for 0.10.0 release.
20081022 menu.c,rzx.c,settings.dat,ui/options.dat: support for autosaves
	 when using RZX recording.
20081024 man/fuse.1: update. Still TODO: debugger updates.
20081024 man/fuse.1: debugger updates.
20081024 man/fuse.1: minor update for disk formats and compressed disk images
         (Fred).
20081028 configure.in: Fixed a typo in the configure script
	 (was '--without-libsamplerate use libsamplerate') (Marek).
20081029 fuse.c: move up settings_end to happen just after printer_end for
         similar reasons - on OS X settings_end refers to machine and other
         entries, so must be complete before deallocating the machine arrays
         (Fred).
20081031 README: small update for 0.10.0.
20081102 disk/{fdd.c,upd_fdc.c}: stop hang if asked for index hole when disk
         motor is off, and change spindown time so that The Running Man disk
         works (bug #2212424) (Gergely Szasz; thanks, Mark Woodmass).
20081102 ui/win32/win32ui.c: Win32: Made ui_error_specific function work
	 similarly to the gtk ui equivalent (Marek).