@@ -31,6 +31,10 @@
 #include <commdlg.h>
 #include <shellapi.h>
 
+/* FIXME: this should be included as part of windows.h, but is not
+          because WIN32_LEAN_AND_MEAN is defined along the way somewhere */
+#include <mmsystem.h>
+
 #include <libspectrum.h>
 
 #define ID_STATUSBAR 900
